fixed deck card back not showing issue

--- a/styles/app.css
+++ b/styles/app.css
@@ -58,7 +58,7 @@ button {
 }
 
 .cardcount {
-  background-image: url(file:///Users/student/Codes/2015-06-blackjack/img/card-back.png);
+  background-image: url(../img/card-back.png);
   background-size: 100% 100%;
   position:absolute;
   width: 125px;
